Fix issue where text clipping wasn't showing the ellipsis.

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -5093,8 +5093,7 @@ category: Components
   height: 22px; }
   @media screen and (min-width: 480px) {
     .breaking-news-banner__excerpt {
-      display: inline;
-      white-space: normal; } }
+      display: inline; } }
 
 a:hover .breaking-news-banner {
   color: #f5ed7f; }
